# Five-Pickles_AI-minds

./: .gitignore  README.md  pyproject.toml
Data_Layer/Data_Collection/Calendar/: .gitignore  CREDENTIALS_SETUP.md  README.md  calendar_watcher.py
Data_Layer/Data_Collection/Clipboard/: .gitignore  README.md  clipboard_watcher.py
Data_Layer/Data_Collection/Clipboard_Concierge/: PERSONALIZED_README.md  README.md  TEST_RESULTS.md  __init__.py  action_executor.py  clipboard_concierge.py  demo_personalized.py  intent_classifier.py  personalized_concierge.py  quick_test.py  test_examples.py  test_formatting.py
Data_Layer/Data_Storage/: File_System.json
